--- a/solution/ui/regulations/css/scss/partials/_statutes.scss
+++ b/solution/ui/regulations/css/scss/partials/_statutes.scss
@@ -4,97 +4,98 @@
 
 @import "../application_settings";
 
-.statute__container {
-    padding: 0 $spacer-5;
+.statute-page {
+    .statute__container {
+        padding: 0 $spacer-5;
 
-    @include screen-xl {
-        padding-left: 0 $spacer-4;
-    }
+        @include screen-xl {
+            padding-left: $spacer-4;
+        }
 
-    .content {
-        margin: 0 auto;
-        padding-top: 30px;
-        max-width: $text-max-width;
+        .content {
+            padding-top: 30px;
+            padding-bottom: 30px;
 
-        .table__parent {
-            padding: 0.75rem;
-            border: 1px solid $table_border_color;
-            border-radius: 4px;
+            .table__parent {
+                padding: 0.75rem;
+                border: 1px solid $table_border_color;
+                border-radius: 4px;
 
-            .table__caption {
-                padding-bottom: 1.5rem;
-                color: $primary_text_color;
-            }
+                .table__caption {
+                    padding-bottom: 1.5rem;
+                    color: $primary_text_color;
+                }
 
-            #statuteTable {
-                width: 100%;
-                border-collapse: collapse;
-                border-spacing: 0;
+                #statuteTable {
+                    width: 100%;
+                    border-collapse: collapse;
+                    border-spacing: 0;
 
-                .table__row {
-                    &--header {
-                    }
-
-                    &--body {
-                        border-bottom: 1px solid $table_border_color;
-                    }
-
-                    &:first-of-type {
-                        .row__cell--body {
-                            padding-top: 18px;
-                        }
-                    }
-
-                    .row__cell {
-                        padding: 0.5rem 0 0.5rem 1.5rem;
-
-                        .cell__title {
-                            font-weight: bold;
-                        }
-
-                        .cell__subtitle {
-                            font-size: 14px;
-                            line-height: 22px;
-                            font-weight: normal;
-                            font-style: italic;
-                        }
-
-                        .cell__usc-label {
-                            padding: 0.5rem 0;
-                        }
-
-                        .cell__name {
-                            font-size: 0.75rem;
-                            line-height: 18px;
-                        }
-
+                    .table__row {
                         &--header {
-                            background-color: $mid_blue_2;
-                            color: #fff;
-                            text-align: left;
-                            vertical-align: top;
                         }
 
                         &--body {
-                            padding-top: 0.75rem;
-                            padding-bottom: 0.75rem;
-                        }
-
-                        &--primary {
-                            width: 220px;
+                            border-bottom: 1px solid $table_border_color;
                         }
 
                         &:first-of-type {
-                            padding-left: 1rem;
+                            .row__cell--body {
+                                padding-top: 18px;
+                            }
                         }
 
-                        &:last-of-type {
-                            padding-right: 1rem;
-                        }
-                    }
+                        .row__cell {
+                            padding: 0.5rem 0 0.5rem 1.5rem;
 
-                    .row__cell--body.row__cell--primary {
-                        background-color: $lightest_blue;
+                            .cell__title {
+                                font-weight: bold;
+                            }
+
+                            .cell__subtitle {
+                                font-size: 14px;
+                                line-height: 22px;
+                                font-weight: normal;
+                                font-style: italic;
+                            }
+
+                            .cell__usc-label {
+                                padding: 0.5rem 0;
+                            }
+
+                            .cell__name {
+                                font-size: 0.75rem;
+                                line-height: 18px;
+                            }
+
+                            &--header {
+                                background-color: $mid_blue_2;
+                                color: #fff;
+                                text-align: left;
+                                vertical-align: top;
+                            }
+
+                            &--body {
+                                padding-top: 0.75rem;
+                                padding-bottom: 0.75rem;
+                            }
+
+                            &--primary {
+                                width: 220px;
+                            }
+
+                            &:first-of-type {
+                                padding-left: 1rem;
+                            }
+
+                            &:last-of-type {
+                                padding-right: 1rem;
+                            }
+                        }
+
+                        .row__cell--body.row__cell--primary {
+                            background-color: $lightest_blue;
+                        }
                     }
                 }
             }
