feat: sticky table header

--- a/solution/ui/regulations/css/scss/partials/_statutes.scss
+++ b/solution/ui/regulations/css/scss/partials/_statutes.scss
@@ -33,6 +33,9 @@
 
                     .table__row {
                         &--header {
+                            position: sticky;
+                            top: $header_height;
+                            z-index: 1;
                         }
 
                         &--body {
