feat: narrow/desktop rendering; create table from obj

--- a/solution/ui/regulations/css/scss/partials/_statutes.scss
+++ b/solution/ui/regulations/css/scss/partials/_statutes.scss
@@ -26,6 +26,9 @@
                     color: $primary_text_color;
                 }
 
+                #statuteList {
+                }
+
                 #statuteTable {
                     width: 100%;
                     border-collapse: collapse;
