feat: better narrow styling

--- a/solution/ui/regulations/css/scss/partials/_statutes.scss
+++ b/solution/ui/regulations/css/scss/partials/_statutes.scss
@@ -27,88 +27,108 @@
                 }
 
                 #statuteList {
-                }
-
-                #statuteTable {
-                    width: 100%;
-                    border-collapse: collapse;
-                    border-spacing: 0;
-
-                    .table__row {
-                        &--header {
-                            position: sticky;
-                            top: $header_height;
-                            z-index: 1;
-                        }
-
-                        &--body {
-                            border-bottom: 1px solid $table_border_color;
-                        }
+                    .statute__list-item {
+                        padding: 12px 0;
+                        border-bottom: 1px solid $table_border_color;
 
                         &:first-of-type {
-                            .row__cell--body {
-                                padding-top: 18px;
-                            }
-                        }
-                    }
-
-                    .row__cell {
-                        padding: 0.5rem 0 0.5rem 1.5rem;
-
-                        a {
-                            &:hover {
-                                color: $primary_link_hover;
-                            }
-                        }
-
-                        .cell__title {
-                            font-weight: bold;
-                        }
-
-                        .cell__subtitle {
-                            font-size: 14px;
-                            line-height: 22px;
-                            font-weight: normal;
-                            font-style: italic;
-                        }
-
-                        .cell__usc-label {
-                            padding: 0.5rem 0;
-                        }
-
-                        .cell__name {
-                            font-size: 0.75rem;
-                            line-height: 18px;
-                        }
-
-                        &--header {
-                            background-color: $mid_blue_2;
-                            color: #fff;
-                            text-align: left;
-                            vertical-align: top;
-                        }
-
-                        &--body {
-                            padding-top: 0.75rem;
-                            padding-bottom: 0.75rem;
-                        }
-
-                        &--primary {
-                            width: 220px;
-                        }
-
-                        &:first-of-type {
-                            padding-left: 1rem;
+                            padding-top: 0px;
                         }
 
                         &:last-of-type {
-                            padding-right: 1rem;
+                            border: none;
+                        }
+
+                        table {
+                            border-spacing: 0px;
+
+                            .row__cell--body {
+                                vertical-align: top;
+                            }
+                        }
+                    }
+                }
+
+                width: 100%;
+                border-collapse: collapse;
+                border-spacing: 0;
+
+                .table__row {
+                    &--header {
+                        position: sticky;
+                        top: $header_height;
+                        z-index: 1;
+                    }
+
+                    &--body {
+                        border-bottom: 1px solid $table_border_color;
+                    }
+
+                    &:first-of-type {
+                        .row__cell--body {
+                            padding-top: 18px;
+                        }
+                    }
+                }
+
+                .row__cell {
+                    padding: 0.5rem 0 0.5rem 1.5rem;
+
+                    a {
+                        text-decoration: none;
+
+                        &:hover {
+                            color: $primary_link_hover;
                         }
                     }
 
-                    .row__cell--body.row__cell--primary {
-                        background-color: $lightest_blue;
+                    .cell__title {
+                        font-weight: bold;
                     }
+
+                    .cell__subtitle {
+                        font-size: 14px;
+                        line-height: 22px;
+                        font-weight: normal;
+                        font-style: italic;
+                    }
+
+                    .cell__usc-label {
+                        padding: 0.5rem 0;
+                    }
+
+                    .cell__name {
+                        font-size: 0.75rem;
+                        line-height: 18px;
+                    }
+
+                    &--header {
+                        background-color: $mid_blue_2;
+                        color: #fff;
+                        text-align: left;
+                        vertical-align: top;
+                    }
+
+                    &--body {
+                        padding-top: 0.75rem;
+                        padding-bottom: 0.75rem;
+                    }
+
+                    &--primary {
+                        width: 220px;
+                    }
+
+                    &:first-of-type {
+                        padding-left: 1rem;
+                    }
+
+                    &:last-of-type {
+                        padding-right: 1rem;
+                    }
+                }
+
+                .row__cell--body.row__cell--primary {
+                    background-color: $lightest_blue;
                 }
             }
         }
