--- a/solution/ui/regulations/css/scss/partials/_statutes.scss
+++ b/solution/ui/regulations/css/scss/partials/_statutes.scss
@@ -4,12 +4,23 @@
 
 @import "../application_settings";
 
-.statute-page {
+.statute-page #statuteApp {
+    @include custom-max(($eds-width-md - 1) / 1px) {
+        h1 {
+            font-size: 36px;
+            margin-top: 24px;
+        }
+    }
+
     .statute__container {
         padding: 0 $spacer-5;
 
         @include screen-xl {
             padding-left: $spacer-4;
+        }
+
+        @include custom-max(($eds-width-sm - 1) / 1px) {
+            padding: 0;
         }
 
         .content {
@@ -20,6 +31,11 @@
                 padding: 0.75rem;
                 border: 1px solid $table_border_color;
                 border-radius: 4px;
+
+                @include custom-max(($eds-width-sm - 1) / 1px) {
+                    padding: 0;
+                    border: none;
+                }
 
                 .table__caption {
                     padding-bottom: 1.5rem;
