removed self closing tags

--- a/solution/backend/regulations/templates/regulations/partials/node_types/SECTION.html
+++ b/solution/backend/regulations/templates/regulations/partials/node_types/SECTION.html
@@ -47,7 +47,7 @@
                     part="{{node.label.0}}"
                     section="{{node.label.1}}"
                     api-url="{{ API_BASE }}"
-                />
+                ></gov-info-links>
             </tooltip-container>
         </div>
     </div>
