--- a/solution/backend/regulations/templates/regulations/partials/footer.html
+++ b/solution/backend/regulations/templates/regulations/partials/footer.html
@@ -30,7 +30,7 @@
                 {% if '/search/' in request.path or '/resources/' in request.path %}
                     {{ parser_last_success|parser_success_date_formatter }}
                 {% else %}
-                    <last-parser-success-date api-url={{ API_BASE }} />
+                    <last-parser-success-date api-url={{ API_BASE }} ></last-parser-success-date>
                 {% endif %}
             </span>.
         </h4>
