self clsonig missed

--- a/solution/backend/regulations/templates/regulations/partials/footer.html
+++ b/solution/backend/regulations/templates/regulations/partials/footer.html
@@ -42,7 +42,7 @@
 <div class="print-footer">
     <em>
         Regulations up to date from <a href="https://www.ecfr.gov" target="_blank" class="external">eCFR</a> as of <span class="last-updated-date-print">
-            <last-parser-success-date api-url={{ API_BASE }} />
+            <last-parser-success-date api-url={{ API_BASE }} ></last-parser-success-date>
         </span>.
     </em>
 </div>
