feat: right padding to left column cell

--- a/solution/ui/regulations/css/scss/partials/_statutes.scss
+++ b/solution/ui/regulations/css/scss/partials/_statutes.scss
@@ -144,10 +144,12 @@
 
                         &--primary {
                             width: 220px;
+                            box-sizing: border-box;
                         }
 
                         &:first-of-type {
                             padding-left: 1rem;
+                            padding-right: 1rem;
                         }
 
                         &:last-of-type {
