Eregcsc 1782 merging api files js (#866)
* Removing parser sucessdate from original api file

* move govinfo links

* Updating supplementalcontent.vue

* fixing camel case issues in getsupplementalcontent

* same as above

* update cachexplorer and remove api file

* same as above

* update cypress test, url changed

* fixed issues with some endpoints

* Add camel casing, add conditional for get type

* upate djtemplate variable on django template

* typo

* remove djtemplate, checks for api url

* reversed logic of if statement

* remove pagination condition

* messed up if logic

* changed required for apiurl

* fix subpart api url

* Unit test for Supplemental content

* Fixed some warnings, fixed some null erorrs, test

* update click event test

* sidebar test

* fix snapshot test for supplemental content

* test for last parsersuccess

* Adding gov info test

* removed self closing tags

* self clsonig missed

* fix subpart on resources page selection, prettier

* updating snapshots.  Weird space change

* fixed subpart resources missing.  cut off at 1000

* removed console.log in a couple spots

* Add navigation of sidebar

* add clicking drop downs for section clicking test

* moved aria label

* removed unnecessary awaits

* change aria label to testid

--- a/solution/backend/regulations/templates/regulations/partials/sidebar_right.html
+++ b/solution/backend/regulations/templates/regulations/partials/sidebar_right.html
@@ -11,11 +11,11 @@
     {% if node_list %}
 
     <supplemental-content
-        api_url="{{ API_BASE }}"
+        api-url="{{ API_BASE }}"
         title="{{ title }}"
         part="{{ reg_part }}"
-        resources_url="{% url 'resources' %}"
-        :resource_display=true
+        resources-url="{% url 'resources' %}"
+        :resource-display=true
         :sections="{{ node_list.sections }}"
         :subparts="{{ node_list.subparts }}"
     ></supplemental-content>
