feat: begin threading statutes link into app; homepage first

--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -31,6 +31,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
             slot="links"
             about-url="{% url 'about' %}"
             resources-url="{% url 'resources' %}"
+            statutes-url="{% url 'statutes' %}"
         ></header-links>
         <header-search
             slot="search"
