feat: finish basic CSS styles

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -204,6 +204,8 @@ $eds-xs-max: $eds-width-sm - 1; // 779px
 $eds-sm-max: $eds-width-md - 1; // 1023px
 $eds-md-max: $eds-width-lg - 1; // 1199px
 
+$eds-width-header-links: 1240px;
+
 // Uses CMS Design System + a larger screen size
 
 // Custom maxes
