feat: get statutes url added everywhere needed

--- a/solution/backend/regulations/templates/regulations/regulation_landing.html
+++ b/solution/backend/regulations/templates/regulations/regulation_landing.html
@@ -21,6 +21,7 @@
                 slot="links"
                 about-url="{% url 'about' %}"
                 resources-url="{% url 'resources' %}"
+                statutes-url="{% url 'statutes' %}"
             ></header-links>
             <header-search
                 slot="search"
