--- a/solution/backend/regulations/templates/regulations/reader.html
+++ b/solution/backend/regulations/templates/regulations/reader.html
@@ -24,6 +24,7 @@
                 slot="links"
                 about-url="{% url 'about' %}"
                 resources-url="{% url 'resources' %}"
+                statutes-url="{% url 'statutes' %}"
             ></header-links>
             <header-search
                 slot="search"
