--- a/solution/backend/regulations/templates/regulations/statute.html
+++ b/solution/backend/regulations/templates/regulations/statute.html
@@ -1,1 +1,35 @@
-<p>hello world</p>
+{% extends "regulations/base.html" %}
+{% load static %}
+{% load string_formatters %}
+
+{% block title %}Statute Reference{% endblock %}
+
+{% block spa_styles %}
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static '/vite/index.css' %}" />
+{% endblock %}
+
+{% block blocking_modal %}{% endblock %}
+
+{% block flash_banner %}{% endblock %}
+
+{% block pre_header %}
+    <a class="ds-c-skip-nav" href="#main-content">Skip to main content</a>
+{% endblock %}
+
+{% block body %}
+<div
+    id="vite-app"
+    data-api-url="{{ API_BASE }}"
+    data-about-url="{% url 'about' %}"
+    data-custom-url="{{ CUSTOM_URL }}"
+    data-home-url="{% url 'homepage' %}"
+    data-resources-url="{% url 'resources' %}"
+    data-search-url="{% url 'search' %}"
+    data-host="{{ host }}"
+></div>
+{% endblock %}
+
+{% block post_footer %}
+    <script src="{% static '/vite/index.js' %}"></script>
+{% endblock %}
