--- a/solution/ui/regulations/css/scss/main.scss
+++ b/solution/ui/regulations/css/scss/main.scss
@@ -24,6 +24,7 @@ $eregs-image-path: "../images" !default;
 @import "partials/typography";
 @import "partials/site_homepage";
 @import "partials/search";
+@import "partials/statutes";
 @import "partials/compare";
 @import "partials/flash_banner";
 @import "partials/header";
