Add statute link config singleton model containing do_not_link field
Items contained in do_not_link will not be linked.

--- a/solution/backend/regulations/templates/regulations/partials/node_types/FlushParagraph.html
+++ b/solution/backend/regulations/templates/regulations/partials/node_types/FlushParagraph.html
@@ -2,6 +2,7 @@
 
 <section class="flush-paragraph-section">
     <fp>
-        {{ node.content | link_statutes:link_conversions | safe }}
+        {% link_statutes node.content link_conversions link_config as content %}
+        {{ content | safe }}
     </fp>
 </section>
