--- a/solution/backend/regulations/templates/regulations/partials/node_types/default.html
+++ b/solution/backend/regulations/templates/regulations/partials/node_types/default.html
@@ -1,7 +1,8 @@
 {% load link_statutes %}
 
 <section>
-    {{node.content | link_statutes:link_conversions | safe}}
+    {% link_statutes node.content link_conversions link_config as content %}
+    {{ content | safe }}
 </section>
 
 {% for node in node.children %}
