feat: disable selector links while loading; add focus/hover rules for links

--- a/solution/ui/regulations/css/scss/partials/_statutes.scss
+++ b/solution/ui/regulations/css/scss/partials/_statutes.scss
@@ -56,9 +56,15 @@
                     text-decoration: none;
                     transition: none;
 
+                    &:hover,
+                    &:focus,
                     &--active {
                         color: $dark_gray;
                         border-bottom: 1px solid $dark_gray;
+                    }
+
+                    &--loading {
+                        pointer-events: none;
                     }
                 }
 
