feat: make selector sticky to top

--- a/solution/ui/regulations/css/scss/partials/_statutes.scss
+++ b/solution/ui/regulations/css/scss/partials/_statutes.scss
@@ -52,6 +52,13 @@
                     }
                 }
 
+                .selector__parent {
+                    @include screen-eds-md {
+                        position: sticky;
+                        top: $header_height;
+                    }
+                }
+
                 .titles-list__link {
                     text-decoration: none;
                     transition: none;
