feat: add backend updates

--- a/solution/backend/regulations/templates/regulations/resources.html
+++ b/solution/backend/regulations/templates/regulations/resources.html
@@ -25,6 +25,7 @@
     data-resources-url="{% url 'resources' %}"
     data-search-url="{% url 'search' %}"
     data-host="{{ host }}"
+    data-statutes-url="{% url 'statutes' %}"
 ></div>
 {% endblock %}
 
