--- a/solution/backend/regulations/templates/regulations/reader.html
+++ b/solution/backend/regulations/templates/regulations/reader.html
@@ -9,28 +9,7 @@
 {% endblock %}
 
 {% block header %}
-    <header id="header" class="sticky">
-        <header-component
-            home-url="{% url 'homepage' %}"
-        >
-            <jump-to
-                slot="jump-to"
-                part="{{ part }}"
-                title="{{ title }}"
-                api-url="{{ API_BASE }}"
-                home-url="{% url 'homepage' %}"
-            ></jump-to>
-            <header-links
-                slot="links"
-                about-url="{% url 'about' %}"
-                resources-url="{% url 'resources' %}"
-            ></header-links>
-            <header-search
-                slot="search"
-                search-url="{% url 'search' %}"
-            ></header-search>
-        </header-component>
-    </header>
+    {% include "regulations/partials/header.html" %}
 {% endblock %}
 
 {% block body %}
