--- a/solution/backend/regulations/templates/regulations/search.html
+++ b/solution/backend/regulations/templates/regulations/search.html
@@ -27,6 +27,7 @@
     data-resources-url="{% url 'resources' %}"
     data-search-url="{% url 'search' %}"
     data-host="{{ host }}"
+    data-statutes-url="{% url 'statutes' %}"
 ></div>
 {% endblock %}
 
