--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -137,7 +137,6 @@ header {
             display: flex;
             justify-content: flex-end;
             align-items: center;
-            width: 480px;
             order: 3;
             padding-right: 20px;
 
@@ -169,7 +168,7 @@ header {
                 }
 
                 .links--container {
-                    @include custom-max(($eds-width-lg - 1) / 1px) {
+                    @include custom-max(($eds-width-header-links - 1) / 1px) {
                         display: flex;
                         height: 36px;
                         padding: 0 8px;
@@ -188,7 +187,7 @@ header {
                         align-items: center;
                         padding: 0 12px;
 
-                        @include custom-min($eds-width-lg / 1px) {
+                        @include custom-min($eds-width-header-links / 1px) {
                             display: none;
                         }
 
@@ -217,7 +216,7 @@ header {
                         -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
                         -moz-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
 
-                        @include custom-min($eds-width-lg / 1px) {
+                        @include custom-min($eds-width-header-links / 1px) {
                             display: none;
                         }
 
@@ -234,7 +233,7 @@ header {
                             padding: 20px 30px;
 
                             li {
-                                &:first-child {
+                                &:not(:last-child) {
                                     margin-bottom: 12px;
                                 }
 
@@ -250,7 +249,7 @@ header {
                         &.links__list--wide {
                             padding: 0 12px;
 
-                            @include custom-max(($eds-width-lg - 1) / 1px) {
+                            @include custom-max(($eds-width-header-links - 1) / 1px) {
                                 display: none;
                             }
 
