--- a/solution/ui/regulations/css/scss/partials/_statutes.scss
+++ b/solution/ui/regulations/css/scss/partials/_statutes.scss
@@ -20,14 +20,85 @@
         }
 
         .content {
+            display: flex;
+            flex-direction: row;
             padding-top: 30px;
             padding-bottom: 30px;
+
+            @include custom-max(($eds-width-md - 1) / 1px) {
+                flex-direction: column;
+            }
+
+            .content__selector {
+                flex: 0 0 200px;
+                margin-right: 25px;
+
+                h3 {
+                    font-size: 1.5rem;
+                    line-height: 36px;
+                    margin: 0 0 16px;
+                }
+
+                h4 {
+                    margin: 0 0 12px;
+
+                    &.acts-item__heading {
+                        color: $mid_blue;
+                        transition: none;
+
+                        &--active {
+                            color: $dark_gray;
+                        }
+                    }
+                }
+
+                .selector__parent {
+                    @include screen-eds-md {
+                        position: sticky;
+                        top: $header_height;
+                    }
+                }
+
+                .titles-list__link {
+                    text-decoration: none;
+                    transition: none;
+
+                    &:hover,
+                    &:focus,
+                    &--active {
+                        color: $dark_gray;
+                        border-bottom: 1px solid $dark_gray;
+                    }
+
+                    &--loading {
+                        pointer-events: none;
+                    }
+                }
+
+                ul {
+                    list-style-type: none;
+
+                    &.acts__list {
+                        padding-left: 0;
+                    }
+
+                    &.titles__list {
+                        margin: 0;
+                    }
+                }
+            }
 
             .table__parent {
                 padding: 0.75rem;
                 border: 1px solid $table_border_color;
                 border-radius: 4px;
+                width: 100%;
 
+                &.loading {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
                 .table__caption {
                     padding-bottom: 1.5rem;
                     color: $primary_text_color;
