typo fix, removed some settings stuff

--- a/solution/backend/cmcs_regulations/templates/admin/login.html
+++ b/solution/backend/cmcs_regulations/templates/admin/login.html
@@ -1,6 +1,6 @@
 {% extends "admin/login.html" %}
 
-{% block title %}E-Regulations Admin Login{% endblock %}
+{% block title %}eRegulations Admin Login{% endblock %}
 
 
 {% block content %}
@@ -23,6 +23,6 @@
        Or Login With&nbsp; <a href="https://www.google.com/">EUA</a>
    </div>
    {% if form.errors %}
-    <p>Invalid credentials.  Please contact an EREGS administrator if you need access.</p>
+    <p>Invalid credentials.  Please contact an eRegs administrator if you need access.</p>
   {% endif %}
 {% endblock %}
