chore: style subtitle; fix code error

--- a/solution/ui/regulations/css/scss/partials/_statutes.scss
+++ b/solution/ui/regulations/css/scss/partials/_statutes.scss
@@ -190,6 +190,7 @@
                             line-height: 22px;
                             font-weight: normal;
                             font-style: italic;
+                            text-transform: capitalize;
                         }
 
                         .cell__usc-label {
