feat: add basic login indicator

--- a/solution/backend/regulations/templates/regulations/base.html
+++ b/solution/backend/regulations/templates/regulations/base.html
@@ -62,6 +62,10 @@ CSS/Javascript etc., should inherit from this template.
 
                 {% block body %}{% endblock %}
 
+                {% block login_indicator %}
+                    {% include "regulations/partials/login_indicator.html" %}
+                {% endblock %}
+
                 {% block footer %}
                     <footer>
                         {% include "regulations/partials/footer.html" %}
