feat: add login button

--- a/solution/backend/regulations/templates/regulations/partials/login_indicator.html
+++ b/solution/backend/regulations/templates/regulations/partials/login_indicator.html
@@ -1,7 +1,11 @@
-{% if user.is_authenticated %}
 <div id="loginIndicator">
+{% if user.is_authenticated %}
     <span class="span__login-lamp span__login-lamp--success"></span>
     <span class="span__login-greeting">Hello, <b>{{ user.username }}</b>!</span>
     <a href="{% url 'logout' %}?next=/">Log Out</a>
-</div>
+{% else %}
+    <span class="span__login-lamp span__login-lamp--error"></span>
+    <span class="span__login-greeting">Hello, <b>Guest</b>!</span>
+    <a href="{% url 'login' %}?next=/">Log In</a>
 {% endif %}
+</div>
