--- a/solution/ui/regulations/css/scss/_layout.scss
+++ b/solution/ui/regulations/css/scss/_layout.scss
@@ -174,6 +174,10 @@ footer {
         &--success {
             background-color: $green;
         }
+
+        &--error {
+            background-color: $dark-gray;
+        }
     }
 }
 
