--- a/solution/ui/regulations/css/scss/_layout.scss
+++ b/solution/ui/regulations/css/scss/_layout.scss
@@ -176,7 +176,7 @@ footer {
         }
 
         &--error {
-            background-color: $dark-gray;
+            background-color: $mid_gray_3;
         }
     }
 }
