feat: add date param to end of JS import path
that matches CSS import param.  Will cache bust JS every day, just like CSS files currently do

--- a/solution/backend/regulations/templates/regulations/search.html
+++ b/solution/backend/regulations/templates/regulations/search.html
@@ -32,5 +32,5 @@
 {% endblock %}
 
 {% block post_footer %}
-    <script src="{% static '/vite/index.js' %}"></script>
+    <script src="{% static '/vite/index.js' %}?{% now "Y-m-d" %}"></script>
 {% endblock %}
