--- a/solution/backend/regulations/templates/regulations/regulation_landing.html
+++ b/solution/backend/regulations/templates/regulations/regulation_landing.html
@@ -35,5 +35,5 @@
 
 {% block post_footer %}
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
-    <script src="{% static '/js/eregs-main.iife.js' %}"></script>
+    <script src="{% static '/js/eregs-main.iife.js' %}?{% now "Y-m-d" %}"></script>
 {% endblock %}
