--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -25,6 +25,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
 
 {% block body %}
 <main>
+    deply num: {{ DEPLOY_NUMBER }}
     <nav id="placeholderNav"></nav>
     <left-nav-collapse contents-description="table of contents">
         <toc-container
