--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -152,5 +152,5 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
 
 {% block post_footer %}
 <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
-<script src="{% static '/js/eregs-main.iife.js' %}?{% now "Y-m-d" %}"></script>
+<script src="{% static '/js/eregs-main.iife.js' %}?{% DEPLOY_NUMBER %}"></script>
 {% endblock %}
