--- a/solution/backend/regulations/templates/regulations/about.html
+++ b/solution/backend/regulations/templates/regulations/about.html
@@ -261,5 +261,5 @@
 
 {% block post_footer %}
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
-    <script src="{% static '/js/eregs-main.iife.js' %}?{% now "Y-m-d" %}"></script>
+    <script src="{% static '/js/eregs-main.iife.js' %}?{% DEPLOY_NUMBER %}"></script>
 {% endblock %}
