--- a/solution/backend/regulations/templates/regulations/search.html
+++ b/solution/backend/regulations/templates/regulations/search.html
@@ -32,5 +32,5 @@
 {% endblock %}
 
 {% block post_footer %}
-    <script src="{% static '/vite/index.js' %}?{% now "Y-m-d" %}"></script>
+    <script src="{% static '/vite/index.js' %}?{% DEPLOY_NUMBER %}"></script>
 {% endblock %}
