--- a/solution/backend/regulations/templates/regulations/base.html
+++ b/solution/backend/regulations/templates/regulations/base.html
@@ -31,7 +31,7 @@ CSS/Javascript etc., should inherit from this template.
         </title>
         {% include "regulations/partials/favicon.html" %}
         {% block spa_styles %}{% endblock %}
-        <link rel="stylesheet" href="{% static '/css/main.css' %}?{% DEPLOY_NUMBER %}" />
+        <link rel="stylesheet" href="{% static '/css/main.css' %}?{{ DEPLOY_NUMBER }}" />
     </head>
     <body class="ds-base {% block body_class %}{% endblock %}">
         <div id="vue-app">
@@ -68,7 +68,10 @@ CSS/Javascript etc., should inherit from this template.
                     </footer>
                 {% endblock %}
 
-                {% block post_footer %}{% endblock %}
+                {% block post_footer %}
+                    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
+                    <script src="{% static '/js/eregs-main.iife.js' %}?{{ DEPLOY_NUMBER }}"></script>
+                {% endblock %}
             </div>
         </div>
     </body>
