--- a/solution/backend/regulations/templates/regulations/cache.html
+++ b/solution/backend/regulations/templates/regulations/cache.html
@@ -1,4 +1,4 @@
-{% extends "regulations/base.html" %}
+{% extends "regulations/spa_base.html" %}
 
 {% load static %}
 
@@ -17,8 +17,4 @@
 {% endblock %}
 
 {% block footer %}
-{% endblock %}
-
-{% block post_footer %}
-    <script src="{% static '/vite/index.js' %}"></script>
 {% endblock %}
