--- a/solution/backend/regulations/templates/regulations/resources.html
+++ b/solution/backend/regulations/templates/regulations/resources.html
@@ -1,4 +1,4 @@
-{% extends "regulations/base.html" %}
+{% extends "regulations/spa_base.html" %}
 
 {% load static %}
 
@@ -27,8 +27,4 @@
     data-host="{{ host }}"
     data-statutes-url="{% url 'statutes' %}"
 ></div>
-{% endblock %}
-
-{% block post_footer %}
-    <script src="{% static '/vite/index.js' %}"></script>
 {% endblock %}
